--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
 	
 	"description": "Ionize is an Open Source PHP Content Management system created for webdesigners and developers.",
 	"keywords": ["content manager system","cms","php","multilingual","modular"],
-	"homepage": "https://adaliszk.github.io/ionize-core/",
+	"homepage": "https://adaliszk.net/ionize-core",	
+	"support": {
+        "issues": "https://github.com/adaliszk/ionize-core/issues",
+        "source": "https://github.com/adaliszk/ionize-core"
+    },
 	
 	"license": "MIT",
 	
@@ -12,6 +16,13 @@
 	"prefer-stable": true,
 
 	"version": "2.0.0-dev",
+	
+	"repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/adaliszk/ionize-core.git"
+        }
+    ],
 
 	"authors": [
 		{"role":"Developer","name":"Michel-Ange Kuntz","homepage":"http://www.partikule.net"},
