--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
 	"require": {
 		"php": "~7.0",
 		"laravel/lumen-framework": "~5.4",
-		"vlucas/phpdotenv": "~2.2"
+		"vlucas/phpdotenv": "~2.2",
+		"mockery/mockery": "1.0.x-dev"
 	},
 
 	"require-dev": {
